Add activities api.
