# api/swagger/swagger.yaml
@@ -121,6 +121,24 @@ paths:
             description: Error
             schema:
               $ref: "#/definitions/ErrorResponse"
+  /classes/{id}/activities:
+      x-swagger-router-controller: classes
+      get:
+        description: get all activities of a class
+        operationId: listActivities
+        parameters:
+        - name: id
+          in: path
+          description: class id
+          required: true
+          type: string
+        responses:
+          "200":
+            description: Success
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
   /assignments:
       x-swagger-router-controller: assignments
       get:
